# ssh-deploy

./: .eslintrc.cjs  README.md  architecture.md  eslint.config.js  package.json  pnpm-lock.yaml  todo.md  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: m20220101_000001_create_table.rs
src-tauri/permissions/: ssh.toml
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/persistence_commands/: delete_ssh_config.rs  get_all_ssh_config.rs  mod.rs  save_ssh_config.rs  tests.rs
src-tauri/src/commands/ssh_commands/: test_ssh.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/db/entities/: mod.rs  ssh_config.rs
src-tauri/src/db/repositories/: mod.rs  ssh_config_repository.rs
src-tauri/src/libs/: auth.rs  mod.rs  persistence.rs  ssh.rs
src-tauri/src/libs/ssh/: copy_ssh.rs  mod.rs  test_ssh.rs
src/components/: component-example.tsx  deploy-form.tsx
src/components/common/: process-status-icon.tsx
src/components/icons/: access-point.tsx  cancel.tsx  check.tsx  file-download-outline.tsx
src/components/ssh-configuration/: ssh-config-container.tsx  ssh-config-host.tsx  ssh-config.tsx  ssh-save-config.tsx  ssh-test-connexion.tsx
src/components/ui/: dropdown-menu.tsx
src/lib/: bindings.ts  sshApi.ts
